Fixed image sizing on mobile.

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -34,8 +34,6 @@
 	background-color: #000;
 	border: 2.5px solid #000;
 	border-radius: 10px;
-	width: 512px;
-	height: 512px;
 
 }
 
